--- a/HTML/body(列表标签）.html
+++ b/HTML/body(列表标签）.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>列表标签</title>
@@ -8,6 +8,7 @@
 <h3>列表标签学习</h3>
 <hr/>
 <!--ul为无序列表，li为一行，前带·-->
+<h4>无序列表：</h4>
 <ul>
     <li>
         qwertyu
@@ -19,6 +20,24 @@
         mnbvcxz
     </li>
 </ul>
+
+<h4>有序列表：</h4>
+<ol type="A">
+    <li>B</li>
+    <li>D</li>
+    <li>C</li>
+    <li>A</li>
+</ol>
+<!--dt小标题，dd内容-->
+<dl>
+    <dt>study:</dt>
+    <dd>java</dd>
+    <dd>python</dd>
+    <dt>test:</dt>
+    <dd>no</dd>
+</dl>
+
+
 
 
 
