--- a/HTML/body(列表标签）.html
+++ b/HTML/body(列表标签）.html
@@ -28,9 +28,9 @@
     <li>C</li>
     <li>A</li>
 </ol>
-<!--dt小标题，dd内容-->
+
 <dl>
-    <dt>study:</dt>
+    <dt>study:</dt>        <!--dt小标题，dd内容-->
     <dd>java</dd>
     <dd>python</dd>
     <dt>test:</dt>
