--- a/HTML/09_简历制作.html
+++ b/HTML/09_简历制作.html
@@ -6,48 +6,42 @@
     <meta name="author" content="Louis">
 </head>
 <body>
-<table>
-    <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+<table border="1">
+    <tr height="30">
+        <td width="50" colspan="5">基本情况</td>
+
     </tr>
-    <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+    <tr height="30">
+        <td width="50">姓名</td>
+        <td width="50"></td>
+        <td width="50">性别</td>
+        <td width="50"></td>
+        <td width="50" rowspan="4"></td>
+
     </tr>
-    <tr>
+    <tr height="30">
+        <td>民族</td>
         <td></td>
+        <td>出生</td>
         <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <!--<td></td>-->
+
     </tr>
-    <tr>
+    <tr height="30">
         <td></td>
         <td></td>
         <td></td>
         <td></td>
-        <td></td>
+        <!--<td></td>-->
+
     </tr>
-    <tr>
+    <tr height="30">
         <td></td>
         <td></td>
         <td></td>
         <td></td>
-        <td></td>
-    </tr>
-    <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <!--<td></td>-->
+
     </tr>
 </table>
 </body>
